compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__accessor_multiple_variants_multiple_positions2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Person {\n    Teacher(title: String, age: Int, name: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
error: Unknown record field
  ┌─ /src/one/two.rakun:6:41
  │
6 │ pub fn get_name(person: Person) { person.name }
  │                                         ^^^^^ Did you mean `age`?

The value being accessed has this type:

    Person

It has these fields:

    .age

Note: The field you are trying to access might not be consistently present
or positioned across the custom type's variants, preventing reliable
access. Ensure the field exists in the same position and has the same type
in all variants to enable direct accessor syntax.
