compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__add_int_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: 1 + 1.0
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:5
  │
1 │ 1 + 1.0
  │     ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
