compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_arrays4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let <<x:utf32>> = <<1>>"
---
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:7
  │
1 │ let <<x:utf32>> = <<1>>
  │       ^^^^^^^ This cannot be a variable

Hint: in patterns utf8, utf16, and utf32  must be an exact string.
See: https://tour.rakun.run/data-types/bit-arrays/
